adding the error handler to the onsubmithandler

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3070",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -37,5 +36,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  }, 
+"proxy": "http://localhost:5000"
+
 }
