--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -36,7 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
-"proxy": "http://localhost:5000"
-
+  },
+  "proxy": "http://localhost:5000"
 }
