--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
