--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
