--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID = "12667906277-1jq6i2clda984gsrpn18omr0g5uqshvc.apps.googleusercontent.com"
+REACT_APP_FACEBOOK_APP_ID = "696398112098618"
