--- a/client/package.json
+++ b/client/package.json
@@ -10,27 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/system": "^4.12.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@mui/system": "^5.13.5",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.3",
-    "classnames": "^2.3.2",
+    "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1"
-   },
+    "react-toastify": "^9.1.1",
+    "yup": "^1.2.0"
+  },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "prettier": "^2.8.8",
+    "prop-types": "^15.8.1",
     "vite": "^4.3.9"
   }
 }
