--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
