--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/system": "^5.13.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.1.3",
     "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
@@ -26,6 +27,7 @@
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
