--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
