--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
+    "sharp": "^0.32.1",
     "validator": "^13.7.0"
   }
 }
