--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/system": "^4.12.2",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.5",
     "@mui/system": "^5.13.5",
     "@reduxjs/toolkit": "^1.9.5",
