changing the caresoul with a react slider

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "simplebar-react": "^3.2.4",
+    "swiper": "^10.0.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
