--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.5",
     "@mui/system": "^5.13.5",
+    "@paypal/react-paypal-js": "^8.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.1.3",
     "formik": "^2.4.2",
