--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
