--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
     "sharp": "^0.32.1",
+    "stripe": "^12.16.0",
     "validator": "^13.7.0"
   }
 }
