--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@mui/system": "^5.13.5",
     "@paypal/react-paypal-js": "^8.1.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.2",
     "axios": "^1.1.3",
     "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
