--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "gapi-script": "^1.2.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
