--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.9.4",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^2.0.20",
     "sharp": "^0.32.1",
     "stripe": "^12.16.0",
