adding delete order func

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,12 +1,21 @@
 PORT=5000
+webClientId=your_google_web_client_id_here
 TOKEN_KEY=your_token_key_here
+ACTIVATION_SECRET=your_ACTIVATION_SECRET_here
+RESET_PASSWORD_SECRET=your_RESET_PASSWORD_SECRET_here
 JWT_EXPIRES_IN=24h
 DATABASE=your_mongodb_connection_string_here
-PAYPAL_CLIENT_ID=your_paypal_client_id_here
+DATABASE_PASSWORD=your_mongodb_password_string_here
 CLOUDINARY_NAME=your_cloudinary_name_here
 CLOUDINARY_API_KEY=your_cloudinary_api_key_here
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret_here
 APP_NAME=your_app_name_here
-webClientId=your_google_web_client_id_here
+PAYPAL_CLIENT_ID=your_paypal_client_id_here
 STRIPE_SECRET_KEY=your_STRIPE_SECRET_KEY_here
 STRIPE_API_KEY=your_STRIPE_API_KEY_here
+FRONTEND_URL=your_FRONTEND_URL_here
+SMPT_HOST=smtp.gmail.com
+SMPT_PORT=465
+SMPT_SERVICE=gmail
+SMPT_MAIL=your_Email_that_you_use_for_sending_emails_via_Nodemailer
+SMPT_PASSWORD=your_password_that_you_generate_for_your_app_from_your_email
