--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.2",
+    "apexcharts": "^3.41.1",
     "axios": "^1.1.3",
     "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
-    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
@@ -34,7 +34,6 @@
     "react-icons": "^4.9.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.1.1",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
