--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "apexcharts": "^3.41.1",
     "axios": "^1.1.3",
     "formik": "^2.4.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
