--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,10 @@
 PORT=5000
-webClientId=your_google_web_client_id_here
-TOKEN_KEY=your_token_key_here
+Google_webClientId=your_google_client_id_here
+Google_secretId=your_google_secret_id_here
+googleOauthRedirectUrl="http://localhost:5000/api/v1/auth/googleLogin" #same as in front end the url of redirection you aded to your google account
+ACCESS_TOKEN_SECRET=your_ACCESS_TOKEN_SECRET_here
 ACTIVATION_SECRET=your_ACTIVATION_SECRET_here
+REFRESH_TOKEN_SECRET=your_REFRESH_TOKEN_SECRET_here
 RESET_PASSWORD_SECRET=your_RESET_PASSWORD_SECRET_here
 JWT_EXPIRES_IN=24h
 DATABASE=your_mongodb_connection_string_here
