improving code and fixing small issues

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,4 @@
 VITE_GOOGLE_CLIENT_ID  = "your google client id"
 VITE_FACEBOOK_APP_ID = "your facebook client id "
 VITE_API_URL="http://localhost:5000"
+VITE_GOOGLE_OAUTH_REDIRECT_URL="http://localhost:5000/api/v1/auth/googleLogin" #this the redirect url that u going to add to your google console  
